--- a/AUTHORS
+++ b/AUTHORS
@@ -3,5 +3,4 @@
 MJ Johnson <61@holbertonschool.com>
 David John Coleman II <djc_fileno@davidjohncoleman.com>
 Kimberly Wong <kjowong@gmail.com>
-Carrie Ybay
-Jared Heck
+Uka Joseph
